--- a/protego/www/templates/tab-account.html
+++ b/protego/www/templates/tab-account.html
@@ -1,9 +1,55 @@
-<!-- <ion-view view-title="Account">
+<ion-view >
   <ion-content>
-    <ion-list>
-    <ion-toggle  ng-model="settings.enableFriends">
-        Enable Friends
-    </ion-toggle>
-    </ion-list>
-  </ion-content>
-</ion-view> -->
+
+<div class="accountForm">
+    <p class="text-center"><b class="bolded"> Sign In Below:</b></p>
+    <br>
+
+    <div class="list list-inset">
+      <label class="item item-input">
+        <input type="text" placeholder="Username">
+      </label>
+      <label class="item item-input">
+        <input type="text" placeholder="Password">
+      </label>
+    </div>
+   <br>
+  <button class="button button-block button-outline button-energized">
+  <b class="bolded">
+    Login To My Account
+  </b>
+  </button>
+</div>
+<br>
+
+<div class="accountForm">
+  <br>
+    <p class="text-center"><b class="bolded"> New to Protego? Let's Create Your Account!</b></p>
+    <br>
+
+    <div class="list list-inset">
+      <label class="item item-input">
+        <input type="text" placeholder="First Name">
+      </label>
+      <label class="item item-input">
+        <input type="text" placeholder="Last Name">
+      </label>
+      <label class="item item-input">
+        <input type="text" placeholder="Username">
+      </label>
+      <label class="item item-input">
+        <input type="text" placeholder="Password">
+      </label>
+    </div>
+    <br>
+    <button class="button button-block button-outline button-energized">
+    <b class="bolded">
+      Create My Account
+    </b>
+    </button>
+    <br>
+
+</div>
+
+</ion-content>
+</ion-view>
