--- a/protego/www/templates/tab-home.html
+++ b/protego/www/templates/tab-home.html
@@ -2,10 +2,43 @@
   <ion-content class="padding">
     <div>
     <h1 class="text-center"> Protego</h1>
-    <p class="text-center">Empowering Your Safety</p>
-
+    <h3 class="text-center">Empower Your Run</h3>
     <br>
     <img class="img-responsive img-rounded" src="http://o.aolcdn.com/dims-shared/dims3/GLOB/crop/3866x1936+0+473/resize/630x315!/format/jpg/quality/85/http%3A%2F%2Fo.aolcdn.com%2Fhss%2Fstorage%2Fmidas%2F13eece9c25c78be4063bdf3969175891%2F203683532%2F499778755.jpg">
+    <br>
+    <br>
+    <div class="homeContent">
+    <p class="text-center"><b class="bolded">Midrun harassment isn’t rare.</b></p>
+    <br>
+    <p>In October 2016, Runner’s World published a report that discussed the harassment that many women runners endure. The survery collected responses from
+      4,670 runners (2,533 women and 2,137 men) show that 43 percent of women at least sometimes experience harassment on the run, compared to just 4 percent
+      of men.</p>
+    <br>
+    <p>Most women will agree that they know “what to do to stay safe.” You are aware of your surroundings, trust in your instincts,
+      and stay within a shouting distance of people if you need to call for help. If you are ever put in an unfortunate position
+      facing someone who is intent on harming you, these standard safety tips may not be enough to make a difference. </p>
+    <br>
+    <p class="text-center"><b class="bolded">You can fight back.</b></p>
+    <br>
+    <p>Now you can protect yourself each and every time you're running solo. With the safety app Protego, you can set up a network of
+      trusted contacts, who can track your route and make sure you get home safe. You can also check the recent crime activity of your
+      intended running route before ever leaving the house by using our map's 'heat-layer'. </p>
+      <br>
+    <p>If you ever feel threatened on your run, Protego has two built in options to help protect you. You can either press the
+       panic button or shout your pre-recorded 'safe word' to set off a siren, alert your contacts of your exact location, and begin recording
+       audio if you need to present evidence to the police.
+     </p>
+    <br>
+  </div>
+    <p class="text-center"><b class="bolded">Set up your profile now to begin running with a peace of mind.</b></p>
+    <br>
+
+    <button ui-sref="tab.account" class=" button button-block button-energized">
+     <b class="bolded">Click Here to Get Started</b>
+    </button>
+
+    <br>
+
 </div>
 
   </ion-content>
