--- a/protego/www/templates/tab-home.html
+++ b/protego/www/templates/tab-home.html
@@ -15,7 +15,7 @@
       of men.</p>
     <br>
     <p>Most women will agree that they know “what to do to stay safe.” You are aware of your surroundings, trust in your instincts,
-      and stay within a shouting distance of people if you need to call for help. If you are ever put in an unfortunate position
+      and stay within a shouting distance of people if you need to call for help. However, if you are ever put in an unfortunate position
       facing someone who is intent on harming you, these standard safety tips may not be enough to make a difference. </p>
     <br>
     <p class="text-center"><b class="bolded">You can fight back.</b></p>
