--- a/protego/www/css/style.css
+++ b/protego/www/css/style.css
@@ -14,6 +14,7 @@
 .runner {
   width: 300px;
   height: 200px;
+  margin-bottom: 20px;
 }
 
 .bolded{
@@ -22,7 +23,7 @@
 }
 
 .homeContent {
-  margin: 20px;
+  margin: 15px;
 }
 
 
@@ -30,5 +31,16 @@
 
 .accountForm {
   margin: 20px;
-  margin-bottom:20px;
+  margin-bottom:10px;
+}
+
+/*Profile Page in Account Tab*/
+
+.profilePage{
+  margin: 20px;
+}
+
+.profileGreet {
+  font-family: 'Berkshire Swash', cursive;
+  font-size: 20px;
 }
