installed StepCounter. Need to input steps into user profile and work with map tomorrow

--- a/protego/www/css/style.css
+++ b/protego/www/css/style.css
@@ -50,4 +50,12 @@
 .profileGreet {
   font-family: 'Berkshire Swash', cursive;
   font-size: 30px;
+  margin-bottom: 50px;
 }
+
+.sectionHeader{
+  font-family: 'Rokkitt', serif;
+  font-size: 22px;
+}
+
+/*Nav Tab*/
