worked on map tab

--- a/protego/www/templates/tab-account.html
+++ b/protego/www/templates/tab-account.html
@@ -83,7 +83,9 @@
 <h5 class="sectionHeader">Track Your Fitness:</h5>
 <br>
 <p><b class="bolded">Daily Distance:</b></p>
-<p>You have taken {{stepcounter.getCountStep}} steps today!</p>
+<p>You tracked {{trackHistory}} steps on your run today!</p>
+<p aria-valueNow="{{history}}" aria-minValue="0"> Your step-total today is {{history}} steps!</p>
+
 
 <hr>
 
