--- a/protego/www/templates/tab-home.html
+++ b/protego/www/templates/tab-home.html
@@ -10,34 +10,35 @@
     <br>
     <div class="homeContent">
 
-    <p class="text-center"><b class="bolded">Know the facts.</b></p>
+    <p class="text-center"><b class="bolded">Running Alone is Risky for Women</b></p>
+    <br>
+    <p>Most female runners will agree that they know “what to do to stay safe.” You are aware of your surroundings, trust your instincts,
+      and stay within a shouting distance of other people. However, if you are ever put in an unfortunate position
+      facing someone who is intent on harming you, these standard safety tips may not be enough to make a difference. </p>
+    <br>
+
+    <p class="text-center"><b class="bolded">Midrun Harassment Isn’t Rare</b></p>
     <br>
     <p>In October 2016, Runner’s World published a report that discussed the harassment that many women runners endure. The survery collected responses from
       4,670 runners (2,533 women and 2,137 men) show that 43 percent of women at least sometimes experience harassment on the run, compared to just 4 percent
       of men.</p>
     <br>
 
-    <p class="text-center"><b class="bolded">Midrun harassment isn’t rare.</b></p>
+    <p class="text-center"><b class="bolded">Don't Be a Victim!</b></p>
     <br>
-    <p>Most women will agree that they know “what to do to stay safe.” You are aware of your surroundings, trust your instincts,
-      and stay within a shouting distance of other people. However, if you are ever put in an unfortunate position
-      facing someone who is intent on harming you, these standard safety tips may not be enough to make a difference. </p>
-    <br>
-
-    <p class="text-center"><b class="bolded">You can fight back.</b></p>
-    <br>
-    <p>Now you can protect yourself each and every time you're running solo. With the safety app Protego, you can set up a network of
+    <p>You can protect yourself each and every time you're running solo with the safety app Protego. Protego allows you to set up a network of
       trusted contacts, who can track your route and make sure you get home safe. You can also check the recent crime activity of your
       intended running route before ever leaving the house by using our map's 'heat-layer'. </p>
     <br>
-    <p>If you ever feel threatened on your run, Protego has two built-in options to help protect you. You can either press the
-       panic button or shout your pre-recorded 'safe word' to set off a siren, alert your contacts of your exact location, and begin recording
-       audio if you need to present evidence to the police.
+    <p>If you ever feel threatened on your run, Protego has a number built-in features to protect you. You can practice
+    simple and effective self-defense techniques for women by choosing a video from our playlist included in your account page
+    or simply press the panic button to alert your contacts of your exact location and set off a siren to discourage an attack.
+
      </p>
     <br>
-
+    <p class="text-center"><b class="bolded">Take Control of Your Safety With Protego</b></p>
   </div>
-    <p class="text-center"><b class="bolded">Use Protego to run with a peace of mind.</b></p>
+
     <br>
 
     <button ui-sref="tab.account" class=" button button-block button-energized">
