--- a/protego/www/templates/tab-panic.html
+++ b/protego/www/templates/tab-panic.html
@@ -3,13 +3,18 @@
   <ion-content>
 
 
+ <div class="panicStyle">
 
-    <p>I'm in trouble!</p>
+   <h3 class=" text-center profileGreet">Feeling Threatened??</h3>
+     <p class="profileGreet text-center"><b class="bolded">To get help immediately, press the
+       'PANIC' button below!</b></p>
+<br>
 
-
-    <button class="panicButton" ng-click="help()">Help</button>
-
-
+    <button class="button button-large button-assertive panicButton " ng-click="help()">PANIC</button>
+    <br>
+    <br>
+    <p class="text-center">** You must be signed-in to alert your contacts!
+<div>
 
 
   </ion-content>
