--- a/protego/www/templates/tab-nav.html
+++ b/protego/www/templates/tab-nav.html
@@ -9,8 +9,9 @@
     <p class="text-center"><b class="bolded">Start tracking your steps and GPS location by enabling your tracking below.</b></p>
     <br>
 
-    <P class="icon ion-location"> You can tap your gps marker to get directions via googleMaps.</p>
-    <P class="icon ion-ios-copy"> You can tap the 'heat layer' on the map to find current crime statistics.</p>
+    <P><i class="icon ion-location current"></i> To get directions, tap on your red "current location" marker.</p>
+
+    <P><i class="icon ion-location crime"></i> The blue markers show the recent crimes reported in your area.</p>
 
 </div>
 
