--- a/protego/www/templates/tab-panic.html
+++ b/protego/www/templates/tab-panic.html
@@ -13,7 +13,7 @@
     <button class="button button-large button-assertive panicButton " ng-click="help()">PANIC</button>
     <br>
     <br>
-    <p class="text-center">** You must be signed-in to alert your contacts!
+    <p class="text-center">** You must be signed-in to alert your contacts</p>
 <div>
 
 
