--- a/protego/www/templates/tab-home.html
+++ b/protego/www/templates/tab-home.html
@@ -10,7 +10,7 @@
     <br>
     <div class="homeContent">
 
-    <p class="text-center"><b class="bolded">Running Alone is Risky for Women</b></p>
+    <p class="text-center"><b class="bolded">Running Alone Can Be Risky for Women</b></p>
     <br>
     <p>Most female runners will agree that they know “what to do to stay safe.” You are aware of your surroundings, trust your instincts,
       and stay within a shouting distance of other people. However, if you are ever put in an unfortunate position
@@ -27,7 +27,7 @@
     <p class="text-center"><b class="bolded">Don't Be a Victim!</b></p>
     <br>
     <p>You can protect yourself each and every time you're running solo with the safety app Protego. Protego allows you to set up a network of
-      trusted contacts, who can track your route and make sure you get home safe. You can also see the recent crime activity of your
+      trusted contacts, who can track your route and make sure you get home safe. You can also see the recently reported assaults near your
       intended running route before ever leaving the house by viewing the crime markers on our map. </p>
     <br>
     <p>If you ever feel threatened on your run, Protego has a number built-in features to protect you. You can practice
