--- a/protego/www/css/style.css
+++ b/protego/www/css/style.css
@@ -4,6 +4,11 @@
   color: red;
 }
 
+ion-nav-view {
+  background-color:#FFF;
+}
+
+
 /*Home Tab*/
 
 .scroll h1 {
@@ -60,7 +65,7 @@
 
 /*Nav Tab*/
 .navText {
-  margin:15px;
+  margin:20px;
 }
 
 .current {
