finished plotting assault crimes

--- a/protego/www/templates/tab-nav.html
+++ b/protego/www/templates/tab-nav.html
@@ -5,12 +5,12 @@
 
       <h3 class="text-center" style="margin-bottom:30px">Run Without Fear</h3>
 
-      <p class="text-center"><b class="bolded">To get started, enable your tracking below. This will find your location, track your route, log your steps and show the latest assaults reported.</b></p>
+      <p class="text-center"><b class="bolded">To get started, please allow tracking below. This will find your location, track your route, log your steps and show the assaults reported in your area.</b></p>
       <br>
 
-      <P><i class="icon ion-location current"></i> Tap on your red "current location" marker to get directions via googleMaps.</p>
+      <P><i class="icon ion-location current"></i> Tap on your red "current location" marker to get directions through Google Maps.</p>
 
-        <P><i class="icon ion-location crime"></i> The blue markers indicate the most recent assaults in a 10 mile radius of your location.</p>
+        <P><i class="icon ion-location crime"></i> The blue markers indicate the most recent assaults within a 10 mile radius of your location.</p>
 
         </div>
         <ion-toggle ng-model="tracking" ng-change="trackToggle()">Enable Tracking</ion-toggle>
