changed server address

--- a/protego/www/templates/tab-account.html
+++ b/protego/www/templates/tab-account.html
@@ -87,6 +87,17 @@
 <hr>
 
 
+<!--Embed self defense videos  -->
+<h5 class="sectionHeader">Learn Basic Self-Defense Skills:</h5>
+<br>
+<p><b class="bolded">Remember that self defense works. Studies show that fighting back correlates with
+  reduced rates of rape and does not correspond with higher rates of physical injury.</b></p>
+
+
+
+<hr>
+
+
 <!-- user emergency contacts info  -->
 
 <h5 class="sectionHeader">Your Emergency Contacts:</h5>
