MVP version. Going to try to add siren sound and strobe lights when panic button is pushed

--- a/protego/www/css/style.css
+++ b/protego/www/css/style.css
@@ -9,6 +9,7 @@ ion-nav-view {
 }
 
 
+
 /*Home Tab*/
 
 .scroll h1 {
@@ -73,7 +74,7 @@ ion-nav-view {
 }
 
 .crime {
-  color: #46d2ff;
+  color: #2abcca;
 }
 
 
