--- a/protego/www/templates/tab-account.html
+++ b/protego/www/templates/tab-account.html
@@ -18,7 +18,7 @@
         <input type="text" placeholder="Username" ng-model ="data.newusername">
       </label>
       <label class="item item-input">
-        <input type="text" placeholder="Password" ng-model ="data.newpassword">
+        <input type="password" placeholder="Password" ng-model ="data.newpassword">
       </label>
     </div>
     <br>
@@ -39,7 +39,7 @@
         <input type="text" placeholder="Username" ng-model ="data.username">
       </label>
       <label class="item item-input">
-        <input type="text" placeholder="Password" ng-model ="data.password">
+        <input type="password" placeholder="Password" ng-model ="data.password">
       </label>
     </div>
    <br>
@@ -80,8 +80,8 @@
 <h5 class="sectionHeader">Track Your Fitness:</h5>
 <br>
 <p><b class="bolded">Daily Distance:</b></p>
-<p>You tracked {{trackHistory}} steps on your run today!</p>
-<p> Your total today is {{history}} steps!</p>
+<p><i class="ion-checkmark-circled" style ="color: #2abcca"></i>  You tracked {{trackHistory}} steps on your run today!</p>
+<p><i class="ion-checkmark-circled" style ="color: #2abcca"></i>  Your total today is {{history}} steps!</p>
 
 
 <hr>
@@ -90,9 +90,35 @@
 <!--Embed self defense videos  -->
 <h5 class="sectionHeader">Learn Basic Self-Defense Skills:</h5>
 <br>
-<p><b class="bolded">Remember that self defense works. Studies show that fighting back correlates with
-  reduced rates of rape and does not correspond with higher rates of physical injury.</b></p>
+<p><b class="bolded">Remember that self defense works! Studies show that fighting back correlates with
+  reduced rates of rape and does not correspond with higher rates of physical injury. With practice, you will
+  have more confidence knowing where and how to strike if you need to defend yourself.</b></p>
+  <br>
+  <br>
 
+  <div class="embed-responsive embed-responsive-4by3">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/ce54QNDoqOY" frameborder="0" allowfullscreen></iframe>
+  </div>
+
+  <br>
+
+  <div class="embed-responsive embed-responsive-4by3">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/hnluSXpJq_c" frameborder="0" allowfullscreen></iframe>
+  </div>
+
+  <br>
+
+  <div class="embed-responsive embed-responsive-4by3">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/1B1H5-F50c4" frameborder="0" allowfullscreen></iframe>
+  </div>
+
+  <br>
+
+<div class="embed-responsive embed-responsive-4by3">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/xmqFCVsYXMk" frameborder="0" allowfullscreen></iframe>
+</div>
+
+<br>
 
 
 <hr>
@@ -100,7 +126,7 @@
 
 <!-- user emergency contacts info  -->
 
-<h5 class="sectionHeader">Your Emergency Contacts:</h5>
+<h5 class="sectionHeader">Set Your Emergency Contacts:</h5>
 <br>
 
    <div class="list list-inset">
