--- a/protego/www/templates/tab-home.html
+++ b/protego/www/templates/tab-home.html
@@ -27,14 +27,12 @@
     <p class="text-center"><b class="bolded">Don't Be a Victim!</b></p>
     <br>
     <p>You can protect yourself each and every time you're running solo with the safety app Protego. Protego allows you to set up a network of
-      trusted contacts, who can track your route and make sure you get home safe. You can also see the recently reported assaults near your
+      trusted contacts, who can track your route and make sure you get home safe. You can also see recently reported assaults near your
       intended running route before ever leaving the house by viewing the crime markers on our map. </p>
     <br>
     <p>If you ever feel threatened on your run, Protego has a number built-in features to protect you. You can practice
-    simple and effective self-defense techniques for women by choosing a video from our playlist included in your account page
-    or simply press the panic button to alert your contacts of your exact location and set off a siren to discourage an attack.
-
-     </p>
+    simple and effective self-defense techniques for women by choosing a video from the playlist on your account page
+    or simply press the panic button to alert your contacts of your exact location and set off a siren to discourage an attack.</p>
     <br>
     <p class="text-center"><b class="bolded">Take Control of Your Safety With Protego</b></p>
   </div>
