--- a/protego/www/templates/tab-nav.html
+++ b/protego/www/templates/tab-nav.html
@@ -3,7 +3,7 @@
 
     <div class="navText">
 
-      <h3 class="text-center" style="margin-bottom:30px">Run Without Fear</h3>
+      <h3 class="text-center" style="margin-bottom:30px; font-family: 'Berkshire Swash', cursive;">Run Without Fear</h3>
 
       <p class="text-center"><b class="bolded">To get started, please allow tracking below. This will find your location, track your route, log your steps and show the assaults reported in your area.</b></p>
       <br>
